--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -1,2 +1,20 @@
+$font-regular: Circe-Regular, sans-serif;
+$font-light: Circe-Light, sans-serif;
+$bold-font: Circe-Bold, sans-serif;
+$ExtraBold-font: Circe-ExtraBold, sans-serif;
+
+
+$main-size-f: 20px;
+$desc-size-f: 28px;
+$h2--header-size-f: 48px;
+$h2-size-f: 42px;
+
 $accent-color: #ff4e50;
 $hover-color: #b63536;
+
+$yellow: #fcbc31;
+$white: #ffffff;
+$beige: #d2bfb0;
+$black: #000000;
+$gray: #a49990;
+
