--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,10 @@
 @import "blocks/header";
 @import "blocks/deadline";
 @import "blocks/problems";
+@import "blocks/check-list";
+@import "blocks/result";
+@import "blocks/interest";
+@import "blocks/program";
 @import "blocks/footer";
 
 
