--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -2,12 +2,14 @@ $font-regular: Circe-Regular, sans-serif;
 $font-light: Circe-Light, sans-serif;
 $bold-font: Circe-Bold, sans-serif;
 $ExtraBold-font: Circe-ExtraBold, sans-serif;
+$footer-Regular: MinionPro-Regular, sans-serif;
 
 
 $main-size-f: 20px;
 $desc-size-f: 28px;
 $h2--header-size-f: 48px;
 $h2-size-f: 42px;
+$footer-size-f: 16px;
 
 $accent-color: #ff4e50;
 $hover-color: #b63536;
@@ -19,4 +21,8 @@ $black: #000000;
 $gray: #a49990;
 $dark: #29211e;
 $program-color: #f8f7f6;
+$experience-color: #f4f3f3;
+$footer-color: #9d9090;
+$check-list-color: #f3ede8;
+$time-color: #717070;
 
