--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,9 @@
 @import "blocks/result";
 @import "blocks/interest";
 @import "blocks/program";
+@import "blocks/acquaintance";
+@import "blocks/experience";
+@import "blocks/resume";
 @import "blocks/footer";
 
 
