--- a/sass/blocks/check-list.scss
+++ b/sass/blocks/check-list.scss
@@ -1,4 +1,49 @@
 .check-list {
+  padding-top: 11px;
+  background-color: $check-list-color;
+  &__title {
+    margin-bottom: 27px;
+  }
+
+  &__book {
+    width: 100%;
+    height: 502px;
+    background-image: url(../img/book.png);
+    background-repeat: no-repeat;
+  }
+
+  &__text {
+    text-align: left;
+    font-size: $desc-size-f;
+    line-height: 32px;
+    padding-top: 7px;
+    margin-bottom: 30px;
+  }
+
+  &__list {
+    padding-left: 39px;
+    list-style-type: none;
+    margin-bottom: 30px;
+    li {
+      text-align: left;
+      position: relative;
+      margin-bottom: 22px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:before {
+        position: absolute;
+        content: '';
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        background-color: $yellow;
+        top: 6px;
+        left: -38px;
+      }
+    }
+  }
+
   &__button {
     text-align: center;
     white-space: pre-line;
