--- a/sass/blocks/problems.scss
+++ b/sass/blocks/problems.scss
@@ -1,7 +1,10 @@
 .problems {
+  padding-bottom: 43px;
   &__title {
     font-size: $h2-size-f;
     white-space: pre-line;
+    margin-top: -61px;
+    margin-bottom: 66px;
   }
 
   &__item {
@@ -14,5 +17,6 @@
     margin-left: 35px;
     max-width: 309.5px;
     margin-bottom: 0;
+    line-height: 24px;
   }
 }
