--- a/sass/blocks/program.scss
+++ b/sass/blocks/program.scss
@@ -1,5 +1,70 @@
 .program {
-  clip-path: polygon(0 30%, 100% 0%, 100% 100%, 0 100%);
+  clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0 100%);
   margin-top: 0;
   background-color: $program-color;
+  padding-top: 290px;
+  padding-bottom: 250px;
+  &__title {
+    white-space: pre-line;
+    margin-bottom: 53px;
+  }
+
+  &__date {
+    font-family: $ExtraBold-font;
+    font-size: $desc-size-f;
+    margin-bottom: 26px;
+  }
+
+  &__timing-wrap {
+    border: 5px solid $yellow;
+    padding: 31px 26px 62px 34px;
+    text-align: left;
+  }
+
+  &__timing {
+    text-align: center;
+    color: $time-color;
+    span {
+      vertical-align: top;
+      margin-top: 7px;
+      margin-right: 15px;
+      display: inline-block;
+    }
+  }
+
+  &__list {
+    list-style-type: none;
+    margin-top: 6px;
+    height: 210px;
+    margin-bottom: 34px;
+    li {
+      line-height: 24px;
+      position: relative;
+      margin-bottom: 8px;
+      &:before {
+        position: absolute;
+        content: '';
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        background-color: #fcbc31;
+        top: 6px;
+        left: -38px;
+      }
+    }
+  }
+
+  &__result {
+    font-family: $bold-font;
+    line-height: 27px;
+  }
+
+  &__text {
+    font-size: $desc-size-f;
+    margin-top: 44px;
+    margin-bottom: 22px;
+    span {
+      font-family: $bold-font;
+    }
+  }
 }
