--- a/sass/blocks/program.scss
+++ b/sass/blocks/program.scss
@@ -1,6 +1,6 @@
 .program {
-  clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0 100%);
-  margin-top: 0;
+  clip-path: polygon(0 20%, 145% 0%, 100% 100%, 0 100%);
+  margin-top: -185px;
   background-color: $program-color;
   padding-top: 290px;
   padding-bottom: 250px;
