--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -74,10 +74,16 @@ img {
   display: inline-block;
   color: $black;
   background-color: $yellow;
-  padding: 23px 34px;
+  padding: 33px 34px;
   border-radius: 50px;
   font-size: 28px;
   line-height: 23px;
+  &.litle {
+    padding: 22px 34px;
+  }
+  &.big {
+    padding: 22px 80px;
+  }
 }
 
 .break {
