--- a/sass/blocks/acquaintance.scss
+++ b/sass/blocks/acquaintance.scss
@@ -8,6 +8,10 @@
   margin-top: -280px;
   padding-bottom: 140px;
   position: relative;
+  @media (max-width: 767px) {
+    clip-path: polygon(0 17%, 180% 0%, 100% 100%, 0 100%);
+    padding-bottom: 180px;
+  }
   &__grad {
     position: absolute;
     top: 0;
@@ -29,6 +33,9 @@
     border-radius: 50px;
     padding: 44px 58px 63px 71px;
     margin-bottom: 45px;
+    @media (max-width: 450px) {
+      padding: 28px;
+    }
   }
 
   &__text {
