--- a/sass/blocks/check-list.scss
+++ b/sass/blocks/check-list.scss
@@ -5,13 +5,6 @@
     margin-bottom: 27px;
   }
 
-  &__book {
-    width: 100%;
-    height: 502px;
-    background-image: url(../img/book.png);
-    background-repeat: no-repeat;
-  }
-
   &__text {
     text-align: left;
     font-size: $desc-size-f;
@@ -47,5 +40,6 @@
   &__button {
     text-align: center;
     white-space: pre-line;
+    margin-bottom: 20px;
   }
 }
