--- a/sass/blocks/problems.scss
+++ b/sass/blocks/problems.scss
@@ -1,7 +1,6 @@
 .problems {
   padding-bottom: 43px;
   &__title {
-    font-size: $h2-size-f;
     white-space: pre-line;
     margin-top: -61px;
     margin-bottom: 66px;
@@ -11,12 +10,27 @@
     display: flex;
     align-items: center;
     margin-bottom: 28px;
+    @media (max-width: 991px) {
+      max-width: 431px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   &__text {
+    text-align: left;
     margin-left: 35px;
     max-width: 309.5px;
     margin-bottom: 0;
     line-height: 24px;
+    @media (max-width: 991px) {
+      max-width: 204px;
+    }
+    @media (max-width: 460px) {
+      width: 205px;
+    }
+    @media (max-width: 377px) {
+      width: 166px;
+    }
   }
 }
