--- a/sass/blocks/result.scss
+++ b/sass/blocks/result.scss
@@ -22,13 +22,10 @@
   &__item {
     border: 2px solid $yellow;
     margin-bottom: 56px;
-    padding: 80px 37px 58px;
+    padding: 85px 50px 60px 50px;
     border-radius: 40px;
     text-align: center;
     position: relative;
-    &.margin-b {
-      margin-bottom: 0;
-    }
   }
 
   &__text {
